@@ -8,21 +8,23 @@ import (
 	"bytes"
 	"fmt"
 	"io"
+	"path/filepath"
 
 	"github.com/gofrs/uuid"
 	"gopkg.in/yaml.v2"
 
+	"github.com/elastic/beats/v7/x-pack/elastic-agent/pkg/agent/application/paths"
 	"github.com/elastic/beats/v7/x-pack/elastic-agent/pkg/agent/errors"
 	"github.com/elastic/beats/v7/x-pack/elastic-agent/pkg/agent/storage"
 	"github.com/elastic/beats/v7/x-pack/elastic-agent/pkg/config"
 )
 
-// AgentConfigFile is a name of file used to store agent information
-const AgentConfigFile = "fleet.yml"
+// defaultAgentConfigFile is a name of file used to store agent information
+const defaultAgentConfigFile = "fleet.yml"
 const agentInfoKey = "agent_info"
 
-// AgentActionStoreFile is the file that will contains the action that can be replayed after restart.
-const AgentActionStoreFile = "action_store.yml"
+// defaultAgentActionStoreFile is the file that will contains the action that can be replayed after restart.
+const defaultAgentActionStoreFile = "action_store.yml"
 
 type persistentAgentInfo struct {
 	ID string `json:"ID" yaml:"ID" config:"ID"`
@@ -31,6 +33,16 @@ type persistentAgentInfo struct {
 type ioStore interface {
 	Save(io.Reader) error
 	Load() (io.ReadCloser, error)
+}
+
+// AgentConfigFile is a name of file used to store agent information
+func AgentConfigFile() string {
+	return filepath.Join(paths.Home(), defaultAgentConfigFile)
+}
+
+// AgentActionStoreFile is the file that will contains the action that can be replayed after restart.
+func AgentActionStoreFile() string {
+	return filepath.Join(paths.Home(), defaultAgentActionStoreFile)
 }
 
 func generateAgentID() (string, error) {
@@ -43,7 +55,8 @@ func generateAgentID() (string, error) {
 }
 
 func loadAgentInfo(forceUpdate bool) (*persistentAgentInfo, error) {
-	s := storage.NewEncryptedDiskStore(AgentConfigFile, []byte(""))
+	agentConfigFile := AgentConfigFile()
+	s := storage.NewEncryptedDiskStore(agentConfigFile, []byte(""))
 
 	agentinfo, err := getInfoFromStore(s)
 	if err != nil {
@@ -67,6 +80,7 @@ func loadAgentInfo(forceUpdate bool) (*persistentAgentInfo, error) {
 }
 
 func getInfoFromStore(s ioStore) (*persistentAgentInfo, error) {
+	agentConfigFile := AgentConfigFile()
 	reader, err := s.Load()
 	if err != nil {
 		return nil, err
@@ -75,9 +89,9 @@ func getInfoFromStore(s ioStore) (*persistentAgentInfo, error) {
 	cfg, err := config.NewConfigFrom(reader)
 	if err != nil {
 		return nil, errors.New(err,
-			fmt.Sprintf("fail to read configuration %s for the agent", AgentConfigFile),
+			fmt.Sprintf("fail to read configuration %s for the agent", agentConfigFile),
 			errors.TypeFilesystem,
-			errors.M(errors.MetaKeyPath, AgentConfigFile))
+			errors.M(errors.MetaKeyPath, agentConfigFile))
 	}
 
 	if err := reader.Close(); err != nil {
@@ -110,6 +124,7 @@ func getInfoFromStore(s ioStore) (*persistentAgentInfo, error) {
 }
 
 func updateAgentInfo(s ioStore, agentInfo *persistentAgentInfo) error {
+	agentConfigFile := AgentConfigFile()
 	reader, err := s.Load()
 	if err != nil {
 		return err
@@ -117,9 +132,9 @@ func updateAgentInfo(s ioStore, agentInfo *persistentAgentInfo) error {
 
 	cfg, err := config.NewConfigFrom(reader)
 	if err != nil {
-		return errors.New(err, fmt.Sprintf("fail to read configuration %s for the agent", AgentConfigFile),
+		return errors.New(err, fmt.Sprintf("fail to read configuration %s for the agent", agentConfigFile),
 			errors.TypeFilesystem,
-			errors.M(errors.MetaKeyPath, AgentConfigFile))
+			errors.M(errors.MetaKeyPath, agentConfigFile))
 	}
 
 	if err := reader.Close(); err != nil {
